@@ -1,10 +1,8 @@
 AUX libgnomekbd-2.21.1-no-libbonobo.patch 373 RMD160 8c277c8263cbc27b4c3144f19839f202d9e785a7 SHA1 1031226ba7b1e632b88508cf68d1369bc98a14cc SHA256 e5bce7d1d9ed9be4d9ec008341aafbf66312e86bda5c9f5fdd70e5fb5086eb6d
 AUX libgnomekbd-2.22.0-system-relink.patch 1043 RMD160 a85f5f5e46ba59ae5a7acf6360d4693b2d27a4d7 SHA1 fecdf02e335c36af95bf8871f132f5915e44705b SHA256 2e3291b483dd2dc96fa63e33aa1ffc2676148f7fddb54a22134e2012d1755355
-DIST libgnomekbd-2.20.0.tar.bz2 392206 RMD160 594ce4e66300fcd468d25f9d65624d8789f46de1 SHA1 f48867cf237e9d0bc8508f5e5966b7307c902759 SHA256 b82310e5d319ac1ba33d008360c4fae128f1b68768f1e51ff1021b60c19a900c
-DIST libgnomekbd-2.22.0.tar.bz2 406083 RMD160 23cabca07aaf18325fc6ca6d4daade4b86044ad0 SHA1 62a11b227d4bcbc3df64fbdfc7e075e9366140da SHA256 84ca7c6703909bccab436d631d69675c9815899752ffdf2fe76102a620f723da
 DIST libgnomekbd-2.24.0.tar.bz2 411322 RMD160 8ca98404615c405705fd82c917acb7b4b55b334e SHA1 3e81ade6050930a9d1e3443b89981cf36821032a SHA256 60f093b4fcbdfa12212d6e29dc2f7802a3234d8035f45efed4b426c0bb293c5a
-EBUILD libgnomekbd-2.20.0-r1.ebuild 1127 RMD160 6a2ff23edfe5ff14b42dac0a0170b2215e6f732c SHA1 66d995bdd991bef7b9de7ff19c50b9c1a10ecc99 SHA256 a8432129b072f84102ac75561404aafa8d8f02553038b6ae23b3e439d3db96b7
-EBUILD libgnomekbd-2.22.0.ebuild 1335 RMD160 6c5af9e9050bf769fff4b85bcf044e7e05609ba0 SHA1 bbae6fbac112a516bbfc03863aeb841149ec64eb SHA256 208a7307c8165b4d90b6df9671494966676d67fec89fdc9918952b953777cc48
+DIST libgnomekbd-2.26.0.tar.bz2 413560 RMD160 0a4b5d133efc8b08482d1dc27cdf2ca56655fd48 SHA1 0b7543df516271e16198135323471b2107dca0ec SHA256 26a53552f3eaeda8d386e31622ba605944eb97dfe5ffa834dc0708761811364f
 EBUILD libgnomekbd-2.24.0.ebuild 1417 RMD160 5edb6aaec797de49aac36b7b540fd7966276fc4a SHA1 3d20d129de8fd9e0612d2c12616a4771f3f12110 SHA256 d58ed7f6a5837bd805764eed39650f71d88c02e8b1ad2006f3c4c6e99a5d0675
-MISC ChangeLog 6391 RMD160 d69806b553eedf785a4c71ef2b211d31576cd152 SHA1 7495324978d359db3d9cd7d0faa86121da1c6ddf SHA256 e5fd2e8ace01b89a3e9ce2334fbe84acb3d7e1c82d3eab0ce104aea69765661e
+EBUILD libgnomekbd-2.26.0.ebuild 1324 RMD160 bb292f00fb6b20433ede699074be038c3b0578db SHA1 5d4b0f69481602d0f6077d736824e282e488584a SHA256 df99e366d0683955e83628dadc35354c7fbf2f14577c23006e1b44a4e451584d
+MISC ChangeLog 6615 RMD160 def6c3b69f7edacd43de2d56dd7094938b4670dc SHA1 f75a46118d29f48ca02db09c4fd7cc317c4382d2 SHA256 f2677987ba021ae000cc70ea2f251044c99486f41e3c8d4ef0b0656c2e350574
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
