@@ -1,8 +1,9 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/libgnomekbd/libgnomekbd-2.22.0.ebuild,v 1.9 2009/04/26 22:36:49 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/libgnomekbd/libgnomekbd-2.26.0.ebuild,v 1.1 2009/05/10 19:24:32 eva Exp $
 
 EAPI="2"
+GCONF_DEBUG="no"
 
 inherit autotools eutils gnome2
 
@@ -14,36 +15,33 @@ SLOT="0"
 KEYWORDS="~amd64-linux ~x86-linux ~x86-solaris"
 IUSE=""
 
-RDEPEND=">=dev-libs/glib-2.6
+RDEPEND=">=dev-libs/glib-2.16
 	>=sys-apps/dbus-0.92
 	>=dev-libs/dbus-glib-0.34
 	>=gnome-base/gconf-2.14
-	>=x11-libs/gtk+-2.10.3
+	>=x11-libs/gtk+-2.13
 	>=gnome-base/libglade-2.6
-	>=gnome-base/libgnome-2.16
-	>=gnome-base/libgnomeui-2.16
-	>=x11-libs/libxklavier-3.2
-	!<gnome-base/gnome-control-center-2.17.0"
+	>=x11-libs/libxklavier-3.2"
 DEPEND="${RDEPEND}
 	>=dev-util/intltool-0.35
 	>=dev-util/pkgconfig-0.19"
 
 DOCS="AUTHORS ChangeLog NEWS README"
 
-# This collides with
-# /etc/gconf/schemas/desktop_gnome_peripherals_keyboard_xkb.schemas from
-# <=control-center-2.17...
-
 pkg_setup() {
 	# Only user interaction required graphical tests at the time of 2.22.0 - not useful for us
-	G2CONF="${G2CONF} --disable-tests"
+	G2CONF="${G2CONF} --disable-tests --disable-static"
 }
 
 src_prepare() {
 	# Fix linking to system's library, bug #265428
-	epatch "${FILESDIR}/${P}-system-relink.patch"
+	epatch "${FILESDIR}/${PN}-2.22.0-system-relink.patch"
 
-	eautomake
+	# Make it libtool-1 compatible
+	rm -v m4/lt* m4/libtool.m4 || die "removing libtool macros failed"
+
+	intltoolize --force --copy --automake || die "intltoolize failed"
+	eautoreconf
 }
 
 src_compile() {
