@@ -1,6 +1,13 @@
 # ChangeLog for gnome-base/libgnomekbd
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/libgnomekbd/ChangeLog,v 1.53 2009/04/28 11:23:27 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/libgnomekbd/ChangeLog,v 1.54 2009/05/10 19:24:32 eva Exp $
+
+*libgnomekbd-2.26.0 (10 May 2009)
+
+  10 May 2009; Gilles Dartiguelongue <eva@gentoo.org>
+  -libgnomekbd-2.20.0-r1.ebuild, -libgnomekbd-2.22.0.ebuild,
+  +libgnomekbd-2.26.0.ebuild:
+  New version for GNOME 2.26. Small bug fixes.
 
   28 Apr 2009; Raúl Porcel <armin76@gentoo.org> libgnomekbd-2.24.0.ebuild:
   sh stable
